Correctly updates state for AttemptResultInputs, can update cutoffs with modal

--- a/WcaOnRails/app/assets/stylesheets/edit_events.scss
+++ b/WcaOnRails/app/assets/stylesheets/edit_events.scss
@@ -1,59 +1,83 @@
+// #events-edit-area {
+//   .panel-heading {
+    // padding-top: 10px;
+    // padding-bottom: 10px;
+
+    // .panel-title {
+      // white-space: nowrap;
+      // overflow: hidden;
+      // display: flex;
+      // align-items: center;
+
+      // $cubing-icon-size: 55px;
+
+      // .img-thumbnail.cubing-icon {
+      //   font-size: 40px;
+      //   position: absolute;
+      //   top: -5px;
+      //   height: $cubing-icon-size;
+      //   z-index: 1;
+
+      //   &::before {
+      //     vertical-align: 0;
+      //   }
+      // }
+
+      // .title {
+      //   padding-left: $cubing-icon-size;
+      //   padding-right: 5px;
+      // }
+
+      // .add-event {
+      //   margin-left: auto;
+      // }
+
+      // .input-group {
+      //   margin-left: auto;
+
+      //   select {
+      //     width: 100px;
+      //   }
+
+      //   .input-group-btn {
+      //     display: inline-block;
+    //     }
+    //   }
+    // }
+  // }
+
+  // .panel-body {
+  //   select[name="format"] {
+  //     width: 100%;
+  //   }
+
+  //   input[name="scrambleSetCount"] {
+  //     display: inline-block;
+  //     width: 50px;
+  //   }
+  // }
+// }
+
 #events-edit-area {
-  .panel-heading {
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-    .panel-title {
-      white-space: nowrap;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-
-      $cubing-icon-size: 55px;
-
-      .img-thumbnail.cubing-icon {
-        font-size: 40px;
-        position: absolute;
-        top: -5px;
-        height: $cubing-icon-size;
-        z-index: 1;
-
-        &::before {
-          vertical-align: 0;
-        }
-      }
-
-      .title {
-        padding-left: $cubing-icon-size;
-        padding-right: 5px;
-      }
-
-      .add-event {
-        margin-left: auto;
-      }
-
-      .input-group {
-        margin-left: auto;
-
-        select {
-          width: 100px;
-        }
-
-        .input-group-btn {
-          display: inline-block;
-        }
-      }
-    }
+  .event-panel-container {
+    width: '33.33%';
   }
 
-  .panel-body {
-    select[name="format"] {
-      width: 100%;
-    }
+  .event-panel__heading {
+    background-color: #f5f5f5;
+    color: #333;
+  }
 
-    input[name="scrambleSetCount"] {
-      display: inline-block;
-      width: 50px;
+  .event-panel__grid {
+    display: flex;
+    justify-content: space-between;
+
+    .event-panel__grid_item {
+      @media (max-width: 768px) {
+        flex: 1;
+      }
+
+      flex: 1/3;
     }
   }
 }
